# YutaiWatch

./: .dockerignore  .gitignore  .mailmap  Cargo.toml  Makefile  README.md  YAAKO_README.md  compose.yaml  generate_tree_ver2.py  memo.md  requirements.txt
.config/: .env.dev.example  .env.example  .env.prod.example  app.dev.toml  app.prod.toml  app.toml
.config/dev/: .env.example  app.toml
.config/prod/: .env.example  app.toml
.docker/dev/: Dockerfile
.docker/prod/: Dockerfile  crontab  entrypoint.sh
.docs/: YAAKO_README.md  architecture.md  architecture_ver2.md  contribution_memo.md  memo.md
app/: Cargo.toml
app/src/: main.rs
data/: debug_state.json  detect_history.jsonl  state.json  update_history.jsonl
discord/: Cargo.toml
discord/src/: lib.rs  model.rs
docker/dev/: Dockerfile
docker/prod/: Dockerfile  entrypoint.sh
infra/: Cargo.toml
infra/src/: lib.rs  scraper.rs  storage.rs
infra_config/: Cargo.toml
infra_config/src/: lib.rs
infra_config/src/config/: loader.rs  mod.rs  models.rs
kernel/: Cargo.toml
kernel/src/: common.rs  initialize.rs  lib.rs  monitor.rs  purune.rs
logger/src/: lib.rs
monitor/: Cargo.toml
monitor/src/: lib.rs
scraper/: debug.py  get_html.py  main.py  元main.py
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  logger.rs
shared/src/constants/: discord.rs  file.rs  jitter.rs  mod.rs
shared/src/models/: detect_history.rs  mod.rs  scraper_output.rs  state.rs  update_history.rs
src/: error.rs  main.rs
src/app/: initialize.rs  mod.rs  monitor.rs
src/domain/: mod.rs  yutai_item.rs
src/infra/: mod.rs
src/infra/http/: mod.rs  request.rs
