# Cargo.toml
[workspace]
resolver = "3"
members = [
  "shared",
  "kernel", 
  "discord", 
  "infra", 
  "infra_config",
  "monitor",]

# 子クレートでも使用できるようなるライブラリ
[workspace.dependencies]
# エラーハンドリング
anyhow = "1.0"
# ログ・構造化ロギング
tracing = "0.1"
# ログの出力・成形用
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
