# Cargo.toml
[workspace]
resolver = "3"
members = [
  "app",
  "shared",
  "kernel", 
  "infra", 
  "infra_config",
  "monitor",
   "discord", ]

# 子クレートでも使用できるようなるライブラリ
[workspace.dependencies]
# エラーハンドリング
# anyhow = "1.0"
# エラー型の定義用
thiserror = "2.0.17"
# ログ・構造化ロギング
tracing = "0.1"
# ログの出力・成形用
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Json用
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 時間型用
chrono = { version = "0.4", features = ["serde"] }

# fingerprint生成用
sha2 = "0.10"