[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
# 子クレートたち
shared = { path = "../shared" }
infra= { path = "../infra" }
infra_config = { path = "../infra_config" }
monitor = { path = "../monitor" }
discord = { path = "../discord" }

# 共通ライブラリ
# anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }